--- a/.github/workflows/windows-dotnet-functionapp-on-azure.yml
+++ b/.github/workflows/windows-dotnet-functionapp-on-azure.yml
@@ -1,13 +1,21 @@
 name: Deploy DotNet project to Azure Function App
 
+# TRIGGERS
 on:
-  [push]
+    push:
+      branches:
+        - master
+    pull_request:
+      types: [opened, synchronize, reopened, closed]
+      branches:
+        - master
 
-# CONFIGURATION
+# ENVIRONMENT CONFIGURATION
 # For help, go to https://github.com/Azure/Actions
 #
-# 1. Set up the following secrets in your repository:
-#   AZURE_FUNCTIONAPP_PUBLISH_PROFILE
+# 1. Download the contents from Azure Function App > Get publish profile. Set up the following secrets in your repository in Settings:
+#   name: AZURE_FUNCTIONAPP_PUBLISH_PROFILE
+#   value: contents of the downloaded file
 #
 # 2. Change these variables for your configuration:
 env:
@@ -15,8 +23,10 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
   DOTNET_VERSION: '7.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
 
+# JOBS
 jobs:
   build-and-deploy:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: windows-latest
     environment: prod
     steps:
