--- a/.github/workflows/windows-dotnet-functionapp-on-azure.yml
+++ b/.github/workflows/windows-dotnet-functionapp-on-azure.yml
@@ -2,11 +2,11 @@ name: Deploy DotNet project to Azure Function App
 
 # TRIGGERS
 on:
-    push:
-      branches:
+    push: # WHAT EVENT
+      branches: # WHICH BRANCH
         - master
     pull_request:
-      types: [opened, synchronize, reopened, closed]
+      types: [opened, synchronize, reopened, closed] # ACTION TYPE OF PR'S
       branches:
         - master
 
@@ -25,8 +25,8 @@ env:
 
 # JOBS
 jobs:
-  build-and-deploy:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+  CD-build:
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true)
     runs-on: windows-latest
     environment: prod
     steps:
@@ -52,5 +52,25 @@ jobs:
         app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
         package: '${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}/output'
         publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
+
+  CI-build:
+    if: github.event_name == 'pull_request' && (github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened')
+    runs-on: windows-latest
+    environment: prod
+    steps:
+    - name: 'Checkout GitHub Action'
+      uses: actions/checkout@v3
+
+    - name: Setup DotNet ${{ env.DOTNET_VERSION }} Environment
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: ${{ env.DOTNET_VERSION }}
+    
+    - name: 'Resolve Project Dependencies Using Dotnet'
+      shell: pwsh
+      run: |
+        pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+        dotnet build --configuration Release --output ./output
+        popd
 
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
