--- a/.github/workflows/CI-build.yml
+++ b/.github/workflows/CI-build.yml
@@ -1,4 +1,4 @@
-name: CI Build DotNet Azure Function App project
+name: Continuous Integration Build DotNet Azure Function App project
 
 # TRIGGERS
 on:
