--- a/.github/workflows/CD-build.yml
+++ b/.github/workflows/CD-build.yml
@@ -16,7 +16,7 @@ on:
 # 2. Change these variables for your configuration:
 env:
   AZURE_FUNCTIONAPP_NAME: 'azfunctionapphelloword'   # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'       # set this to the path to your function app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './Source'       # set this to the path to your function app project, defaults to the repository root '.' 
   DOTNET_VERSION: '7.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
 
 # JOBS
