--- a/.github/workflows/CI-build.yml
+++ b/.github/workflows/CI-build.yml
@@ -17,7 +17,8 @@ on:
 # 2. Change these variables for your configuration:
 env:
   AZURE_FUNCTIONAPP_NAME: 'azfunctionapphelloword'   # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './Source'       # set this to the path to your function app project, defaults to the repository root '.'
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './Source'       # set this to the path to your function app project, defaults to the repository root if use '.'
+  AZURE_FUNCTIONAPP_TESTS_PACKAGE_PATH: './Tests'       # set this to the path to your function app test project, defaults to the repository root if use '.'
   DOTNET_VERSION: '7.0.x'                   # set this to the dotnet version to use (e.g. '2.1.x', '3.1.x', '5.0.x')
 
 # JOBS
@@ -40,6 +41,13 @@ jobs:
       run: |
         pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
         dotnet build --configuration Release --output ./output
+        popd
+
+    - name: 'Run Unit Tests'
+      shell: pwsh
+      run: |
+        pushd './${{ env.AZURE_FUNCTIONAPP_TESTS_PACKAGE_PATH }}'
+        dotnet test --configuration Release
         popd
 
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
